test/asm/multi-line-strings.err
error: multi-line-strings.asm(23):
    Unterminated string
warning: multi-line-strings.asm(35): [-Wuser]
    check the line number
Assembly aborted with 1 error!
